--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"babel-loader": "^8.2.2",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"babel-plugin-root-import": "^6.6.0",
-		"bootstrap": "^4.6.0",
 		"browser-sync": "^2.26.14",
 		"browsersync-ssi": "^0.2.4",
 		"del": "^6.0.0",
@@ -33,5 +32,8 @@
 		"gulp-sass-glob": "^1.1.0",
 		"gulp-stylus": "^2.7.0",
 		"webpack-stream": "^6.1.2"
+	},
+	"dependencies": {
+		"swiper": "^8.4.4"
 	}
 }
